variety of language fixes to nat's appendix

--- a/characters.tex
+++ b/characters.tex
@@ -18,7 +18,6 @@ called height $d$ Lubin--Tate theory or Morava $E$--theory such that
 \[
 BS^1_E = \Spf(E^0(BS^1)) = \G.
 \]
-
 Fixing a coordinate on $\G$ provides us with a formal group law
 \[
 x +_{\G} y.
@@ -29,11 +28,10 @@ Let $C_{m} = S^1[m]$. There is an isomorphism (depending on the chosen coordinat
 \[
 E^*(BC_{m}) \cong E^*\ps{x}/([m]_{\G}(x))
 \]
-of $E^*$-algebras and $E^*(BC_{m})$ is free as an $E^*$-module of rank $p^{kd}$ where $p^k|m$ and $p^{k+1} \nmid m$. \pushQED\qed \qedhere \popQED
+of $E^*$-algebras. Moreover, $E^*(BC_{m})$ is free as an $E^*$-module of rank $p^{kd}$ where $p^k|m$ and $p^{k+1} \nmid m$.\footnote{To prove this result it is most natural to set $|x| = 2$, but for the purposes of this Lecture (and, indeed, this textbook) it is most natural to set $|x| = 0$. We can move back and forth between these choices by the change of coordinates $x \leftrightarrow ux$, where $u$ is a generator of $\pi_2 E$.} \pushQED\qed \qedhere \popQED
 \end{proposition}
-To prove this result it is most natural to have $x$ in degree $2$, but for the purposes of this appendix it is most natural to have $x$ in degree $0$. We can move back and forth between these by a simple change of coordinates $x \leftrightarrow ux$, where $u$ is a generator of $\pi_2E$.
 
-\begin{proposition}[{\cite[Corollary 5.10]{HKR}}] \label{app:ab}
+\begin{corollary}[{\cite[Corollary 5.10]{HKR}}] \label{app:ab}
 Let 
 \[
 A \cong C_{m_1} \times \cdots \times C_{m_i}
@@ -42,20 +40,19 @@ be a finite abelian group.  There is then an isomorphism of $E^*$-algebras
 \[
 E^*(BA) \cong E^*\ps{x_1, \ldots, x_{i}}/([m_1]_{\G}(x_1), \ldots, [m_i]_{\G}(x_i)). \pushQED\qed \qedhere \popQED
 \]
-\end{proposition}
+\end{corollary}
 
 
 If $A \cong C_{p^{k_1}} \times \cdots \times C_{p^{k_i}}$ is an abelian $p$-group, it follows that $E^*(BA)$ is a free $E^*$-module of rank $p^{k_1d+\cdots + k_id}$. If $m$ is prime to $p$, then $[m]_{\G}(x)/x$ is a unit in $E^*\ps{x}$. This implies that the rank of $E^*(BA)$ only depends on the Sylow $p$-subgroup of $A$.
 
-The most computable of chromatic cohomology theories is periodic rational cohomology. For a $\Q$-algebra $R$, the formal group associated to $HRP$ is the (height $0$) additive formal group. It is natural to want to gain information regarding $E^*(X)$ (for any chromatic cohomology theory $E$) by comparing $E$-cohomology with periodic rational cohomology. For instance, this is the purpose of the classical Chern character: For $X$ a space, the Chern character is a map of commutative rings
+The most computable of chromatic cohomology theories is periodic rational cohomology. For a $\Q$-algebra $R$, the formal group associated to $HRP$ is the (height $0$) additive formal group. It is natural to want to gain information regarding $E^*(X)$ (for any chromatic cohomology theory $E$) by comparing $E$-cohomology with periodic rational cohomology.\footnote{We have employed a similar-sounding strategy elsewhere in this text, where we have approximated an arbitrary complex-orientable theory by $\HFp P$, using the fact that the infinite-height group $\G_a \otimes \F_p$ is a dense point in $\moduli{fg} \times \Spec \Z_{(p)}$.  However, the height $0$ point $\G_a \otimes \Q$ is \emph{not} dense, and so our intention here is much more delicate.}  For instance, this is the purpose of the classical Chern character: for $X$ a space, the Chern character is a map of commutative rings
 \[
 K^0(X) \to H\Q P^0(X)
 \] 
-induced by the map of spectra \[K \to H\Q \wedge K \simeq H\Q P.\] For $X$ a finite $CW$-complex, it induces an isomorphism
+induced by the map of spectra\footnote{We could replace $\Q$ with $\R$ or $\C$ and the result would still hold.} \[K \to H\Q \wedge K \simeq H\Q P.\] For $X$ a finite $CW$-complex, it induces an isomorphism
 \[
 \Q \otimes K^0(X) \cong H\Q P^0(X).
 \]
-We could replace $\Q$ with $\R$ or $\C$ and the result would still hold.
 
 When $X$ is a finite CW complex, there is an isomorphism
 \begin{equation*}
@@ -65,13 +62,12 @@ This follows from the fact that $\Q \otimes E^*$ is a flat $E^*$-algebra. When $
 \[
 \Q \otimes E^*(BA)
 \]
-is free as a $\Q \otimes E^*$-module of rank $p^{k_1d + \ldots + k_id}$. However, \[H(\Q \otimes E^0)P^*(BA) \cong \Q \otimes E^*\] is free of rank $1$. From the perspective of group cohomology, $H(\Q \otimes E^0)P^*(BA)$ is rank $1$ due to Machke's theorem. From the perspective of homotopy theory, this follows because we have isomorphisms
+is free as a $\Q \otimes E^*$-module of rank $p^{k_1d + \ldots + k_id}$. However, \[H(\Q \otimes E^0)P^*(BA) \cong \Q \otimes E^*\] is free of rank $1$.  This is essentially a consequence of Machke's theorem: using the facts that the order of $A$ is invertible in $\Q \otimes E^0$ and that the action of $A$ is trivial, we have isomorphisms
 \begin{align*}
-\pi_*((H(\Q \otimes E^0)P)^{BA}) &\cong \pi_*((H(\Q \otimes E^0)P)^{hA}) \\ &\cong (\pi_*(H(\Q \otimes E^0)P))^A \\ &\cong \pi_*(H(\Q \otimes E^0)P),
+\pi_*((H(\Q \otimes E^0)P)^{BA}) &\cong \pi_*((H(\Q \otimes E^0)P)^{hA}) \\ &\cong (\pi_*(H(\Q \otimes E^0)P))^A \\ &\cong \pi_*(H(\Q \otimes E^0)P).
 \end{align*}
-following from the fact that the order of $A$ is invertible in $\Q \otimes E^0$ and the action of $A$ is trivial.
 
-To explain one of the inputs into the main theorem of this Lecture, we need one more notion. Let $G$ be a finite group. A $G$--CW complex $X$ is a $G$--space built by beginning with a set of ``points" of the form $G/H$ for $H \subseteq G$ a subgroup of $G$. The $n$--skeleton $X^{(n)}$ is built from the $(n-1)$--skeleton by a pushout
+To explain one of the inputs into the main theorem of this Lecture, we need one more notion. For $G$ a finite group, a $G$--CW complex $X$ is a $G$--space built inductively by attaching ``cells'' of the form $(G/H) \times D^n$, as in the following pushout diagram:
 \begin{center}
 \begin{tikzcd}
 \coprod_{i \in I} (G/H_i \times S^{n-1}) \arrow{r} \arrow{d} & \coprod_{i \in I} (G/H_i \times D^n) \arrow{d} \\
@@ -92,21 +88,21 @@ where $X$ is a $G$-space and
 \[
 X_{hG} \simeq EG \times_G X = (EG \times X)/G
 \]
-is the homotopy orbits for the $G$-action on $X$. The resulting equivariant cohomology theory is called ``Borel equivariant $E$--theory".
+is the homotopy orbits for the $G$-action on $X$. The resulting equivariant cohomology theory is called \textit{Borel equivariant $E$--theory}.
 
-The purpose of this appendix is to explain, in the case of $E = E_{\Gamma}$, how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes $X$, to an analogous formula for finite $G$--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant $E$--cohomology (restricted to finite $G$--CW complexes) by some version of Borel equivariant rational cohomology.
+The purpose of this appendix is to explain, in the case of $E = E_{\Gamma}$, how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes $X$, to an analogous formula for finite $G$--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant $E$--cohomology (restricted to finite $G$--CW complexes) by some version of Borel equivariant rational cohomology.  In particular, this links back up to our original goal of studying $E^*(B\Sigma_n)$ by the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((G/G) \times *).\]
 
 \subsection*{Formal Geometry}
 
 %p-divisible groups from formal groups (reference 4.4-5.1). Algebro-geometric description of $\Spf E^0(BA)$. Fix $S^1$, build p-divisible group from $p^k$-torsion in $S^1$. Note that all of this makes sense over $\Spec E^0$. Return to approximation problem for $E^0(BC_{p^k})$, phrase it in an algebro geometric way and work out the need to build $C_0$.
 
-Recall from \Cref{DefnPDivGp} that associated to a finite height formal group is a connected $p$--divisible group built out of the $p^k$--torsion of the formal group as $k$ varies. Associated to the universal deformation $\G$ is the ``height $n$'' $p$--divisible group
+Recall from \Cref{DefnPDivGp} that associated to a finite height formal group is a connected $p$--divisible group built out of the $p^k$--torsion of the formal group as $k$ varies. Associated to the universal deformation $\G$ is the following $p$--divisible group of height $d$
 \[
 \G[p] \hookrightarrow \G[p^2] \hookrightarrow \ldots,
 \]
-where the maps are the inclusions of the $p^k$--torsion into the $p^{k+1}$--torsion.  \Cref{app:cyclic} implies that 
+where the maps are the inclusions of the $p^k$--torsion into the $p^{k+1}$--torsion.  \Cref{app:cyclic} implies first 
 \[
-B(C_{p^k})_{E} \cong \G[p^k]
+B(C_{p^k})_{E} \cong \G[p^k],
 \]
 and that the $p$--divisible group associated to $\G$ can be formed using the inclusions $C_{p^k} = S^1[p^k] \hookrightarrow C_{p^{k+1}} = S^1[p^{k+1}]$. 
 %as the system of schemes
@@ -115,11 +111,11 @@ and that the $p$--divisible group associated to $\G$ can be formed using the inc
 %\]
 \Cref{app:cyclic} also implies that all of the schemes in this system are finite flat commutative groups schemes over $\Spf E^0$. The $p$--divisible group is called ``height $d$'' because $\G[p]$ is a finite group scheme of order $p^d$ or, equivalently, since $E^0(BC_p)$ has rank $p^d$ as a free module over $E^0$.
 
-There are $p$--divisible groups that are not built from formal groups, and the simplest of these plays a role in this story. Let 
+There are $p$--divisible groups that are \emph{not} built from formal groups, and the simplest of these plays a role in this story. We define the \textit{constant $p$--divisible group of height $1$} to be 
 \[
 C_{p^{\infty}} = S^1[p^\infty] = \colim \big ( C_p \hookrightarrow C_{p^2} \hookrightarrow \ldots \big ).
 \]
-This is the height $1$ constant $p$--divisible group. It is called ``constant'' because it is made up of constant group schemes. The height $d$ constant $p$--divisible group is just the $d$--fold product $C_{p^\infty}^{\times d} = (S^1)^{\times d}[p^\infty]$.
+It is called \textit{constant} because it is made up of constant group schemes, and it is called height $1$ because $|S^1[p]| = p^1$.  The constant $p$--divisible group of height $d$ is then the $d$--fold product $C_{p^\infty}^{\times d} = (S^1)^{\times d}[p^\infty]$.
 
 More generally, a similar description of $BA_{E}$ can be given using formal geometry when $A$ is a finite abelian group. Let $A^*$ be the Pontryagin dual of $A$ and let
 \[
@@ -129,7 +125,7 @@ be the formal scheme that associates to a complete local $E^*$--algebra $R$
 \[
 \InternalHom{FormalGroups}(A^*, \G)(R) = \CatOf{AbelianGroups}(A^*, \G(R)).
 \]
-Any map from $A^*$ to $\G(R)$ must land in the $p^k$--torsion $\G[p^k](R)$ for $k$ large enough. Thus for $k$ such that $A[p^k] = A$, there is an isomorphism of formal schemes
+For large enough $k$, we have $A = A[p^k]$, and from this it follows that any map from $A^*$ to $\G(R)$ must land in the $p^k$--torsion $\G[p^k](R)$.  There is thus an isomorphism of formal schemes
 \[
 \InternalHom{FormalGroups}(A^*, \G) \cong \InternalHom{FormalGroups}(A^*, \G[p^k]).
 \]
@@ -142,17 +138,17 @@ natural in maps of finite abelian groups. \qed
 \end{proposition}
 
 
-The formal scheme $\InternalHom{FormalGroups}(A^*,\G)$ is finite and flat over $\Spf(E^0)$. Because of this, this formal scheme can be viewed as a scheme---really a scheme, and not a formal scheme!---over $\Spec(E^0)$. Without going into the technical details of formal to nonformal constructions, the point is that the topology on a complete local $E^0$-algebra is not important to $\G[p^k]$. A more precise way to say this is that, for a continuous $E^0$-algebra $R$, there is a bijection
+The formal scheme $\InternalHom{FormalGroups}(A^*,\G)$ is finite and flat over $\Spf(E^0)$. Because of this, this formal scheme can be viewed as a scheme---really a scheme, and not a formal scheme!---over $\Spec(E^0)$. Without going into the technical details of formal to informal constructions, the main idea is that the topology on a complete local $E^0$-algebra is not important to $\G[p^k]$: for a continuous $E^0$-algebra $R$, there is a bijection
 \[
 \CatOf{Algebras}_{E^0}^{\mathrm{cts}}(E^0(BC_p),R) \cong \CatOf{Algebras}_{E^0}(E^0(BC_p),R).
 \]
-Note that the same cannot be said for $E^0(BS^1)$. Thus we may restrict our attention to the scheme
+The same cannot be said for $E^0(BS^1)$.  In the case of $E^0(BC_p)$, though, we may thus restrict our attention to the scheme
 \[
 \InternalHom{FormalGroups}(A^*,\G[p^k]) \co \CatOf{Algebras}_{E^0} \rightarrow \CatOf{Sets}
 \]
 sending an $E^0$--algebra $R$ to
 \[
-\CatOf{AbelianGroups}(A^*, \G[p^k](R)) \cong \CatOf{GroupSchemes}(A^*, \Spec(R) \times_{\Spec(E^0)} \G[p^k]).
+\CatOf{AbelianGroups}(A^*, \G[p^k](R)) \cong \CatOf{GroupSchemes}(A^*, \Spec(R) \underset{{\Spec(E^0)}}{\times} \G[p^k]).
 \]
 Since the ring map $E^0 \rightarrow \Q \otimes E^0$ is not continuous, this discussion is important to phrasing an algebro-geometric version of the appoximation problem explained at the end of the previous section.
 
@@ -160,9 +156,9 @@ When $G = A$ and $X = *$, the approximation problem can now be given an algebro-
 \[
 \Spec(R) \times \InternalHom{FormalGroups}(A^*, \G[p^k]) \cong  \InternalHom{FormalGroups}(A^*, \Spec(R) \times \G[p^k])
 \]
-is recognizable as $\Spec(-)$ of the $HRP$-cohomology of a space. This would only solve the approximation problem for $E^0(BA)$. Astoundingly, it will turn out that, by a series of reductions, this is enough. There is a surprisingly simple answer to the approximation problem in this case. 
+is recognizable as $\Spec(-)$ of the $HRP$-cohomology of a space. This would only solve the approximation problem for $E^0(BA)$---but, astoundingly, it will turn out that this is enough. There is a surprisingly simple answer to the approximation problem in this case. 
 
-Fix $\Lambda = \Z_{p}^{d}$ and let $\Lk = \Lambda/p^k\Lambda$ so that there are non-canonical isomorphisms
+Fix\footnote{This choice of $\Lambda$ is the only choice made in this Lecture, and last subsection of this Lecture addresses how natural the character map is in automorphisms of $\Lambda$.  From a certain perspective, the results of Barthel--Stapleton~\cite{BarthelStapleton} can be viewed as an analysis of how natural the character map is among finite index maps $\Lambda \hookrightarrow \Lambda$.} $\Lambda = \Z_{p}^{d}$ and let $\Lk = \Lambda/p^k\Lambda$, so that there are non-canonical isomorphisms
 \[
 \Lambda^* \cong (\Q/\Z_{(p)})^d \cong (S^1[p^{\infty}])^d.
 \] 
@@ -170,8 +166,6 @@ as well as canonical isomorphisms
 \[
 \Lambda^*[p^k] \cong (\Lambda_{k})^* \cong \CatOf{TopologicalGroups}(\Lambda_k, C_{p^k}).
 \]
-This choice of $\Lambda$ is the only choice made in this Lecture. The last subsection of this Lecture addresses how natural the character map is in automorphisms of $\Lambda$.\footnote{From a certain perspective, the results of Barthel--Stapleton~\cite{BarthelStapleton} can be viewed as an analysis of how natural the character map is among finite index maps $\Lambda \hookrightarrow \Lambda$.}
-
 %Let $\Lk = (C_{p^k}^{\times d})^*$ so that there are canonical isomorphisms
 %\[
 %\Lk^* \cong (S^1)^{\times d}[p^k] = C_{p^k}^{\times d}.
@@ -180,7 +174,7 @@ If we could find an $R$ such that
 \[
 \Spec(R) \times_{\Spec(E^0)} \G[p^k] \cong \Lk^*
 \]
-as abelian group schemes, then we would win since
+as abelian group schemes, then we would be done, since
 \[
 \sheaf O_{\Lk^*} \cong \prod_{\Lk^*} R \cong HRP^0\left(\coprod_{\Lk^*} \ast\right)
 \]
@@ -237,7 +231,7 @@ C_0 \xrightarrow{u_f} R
 \]
 such that $f = \Spec(R) \times_{\Spec(C_0)} u$, where the pullback is along $u_f$.
 
-The idea of the construction of $C_0$ is quite simple.  \Cref{app:abeliangroupdualhom} implies \[E^0(B\Lk) \cong \sheaf O(\InternalHom{FormalGroups}(\Lk^*,\G[p^k])).\]  To construct $C_0$, it suffices to understand the open subscheme of $\InternalHom{FormalGroups}(\Lk^*,\G[p^k])$ consisting of the homomorphisms that are isomorphisms. 
+The idea of the construction of $C_0$ is quite simple.  \Cref{app:abeliangroupdualhom} implies \[E^0(B\Lk) \cong \sheaf O(\InternalHom{FormalGroups}(\Lk^*,\G[p^k])).\]  To construct $C_0$, it suffices to understand the open subscheme of the mapping scheme $\InternalHom{FormalGroups}(\Lk^*,\G[p^k])$ which consists of the homomorphisms that are isomorphisms. 
 
 Since $E^0(B\Lk)$ corepresents $\InternalHom{FormalGroups}(\Lk^*,\G[p^k])$, it carries the universal homomorphism of group schemes
 \[
@@ -251,7 +245,7 @@ or equivalently a map of commutative group schemes
 \[
 u \colon \Lk^* \rightarrow \Spec(E^0(B\Lk)) \times_{\Spec(E^0)} \G[p^k].
 \]
-This map is a consequence of the ($\operatorname{Hom}, \times$)--adjunction for finite flat commutative group schemes: the identity map
+This map is a consequence of the exponential adjunction for finite flat commutative group schemes: the identity map
 \[
 1 \co \InternalHom{FormalGroups}(\Lk^*,\G[p^k]) \to \InternalHom{FormalGroups}(\Lk^*,\G[p^k])
 \]
@@ -259,11 +253,11 @@ is adjoint to the evaluation map
 \[
 \mathrm{ev} \co \Lk^* \times  \InternalHom{FormalGroups}(\Lk^*,\G[p^k]) \to \G[p^k].
 \]
-Given $\alpha \in \Lk^*$, the naturality of Proposition \ref{app:abeliangroupdualhom} implies that the ring of functions on the corresponding map
+Given $\alpha \in \Lk^*$, the naturality of Proposition \ref{app:abeliangroupdualhom} implies that behavior of
 \[
 \InternalHom{FormalGroups}(\Lk^*,\G[p^k]) \to \G[p^k]
 \]
-is precisely
+on rings of functions is precisely
 \begin{equation} \label{app:gfunctions1}
 E^0(B\alpha) \colon E^0(BC_{p^k}) \to E^0(B\Lk).
 \end{equation}
@@ -273,9 +267,9 @@ u^* \colon E^0(B\Lk)\ps{x}/[p^k]_{\G}(x) \xrightarrow{} \prod_{\Lk^*} E^0(B\Lk).
 \end{equation}
 Fixing a set of generators for $\Lk^*$, gives an isomorphism
 \[
-E^0(B\Lk) \cong E^0\ps{x_1, \ldots, x_d}/([p^k]_{\G}(x_1), \ldots, [p^k]_{\G}(x_d)).
+E^0(B\Lk) \cong E^0\ps{x_1, \ldots, x_d}/([p^k]_{\G}(x_1), \ldots, [p^k]_{\G}(x_d)),
 \]
-For the factor corresponding to $(i_1, \ldots, i_d) \in \Lk^*$, 
+and the behavior of $u^*$ on the factor corresponding to $(i_1, \ldots, i_d) \in \Lk^*$ is then
 \[
 u^* \colon x \mapsto [i_1]_{\G}(x_1)+_{\G} \ldots +_{\G} [i_k]_{\G}(x_d).
 \]
@@ -323,13 +317,13 @@ Thus the determinant is, up to multiplication by a unit,
 \end{proof}
 
 \begin{corollary}
-Inverting $S_k$ in $E^0(B\Lk)$ inverts $p$.
+Inverting $S_k$ in $E^0(B\Lk)$ inverts $p$. \pushQED\qed \qedhere \popQED
 \end{corollary}
 
 Set $C_{0,k} = S_{k}^{-1}E^0(B\Lk)$.  The set $S_k$ consists largely of zero divisors. Because of this, we should be concerned that $C_{0,k}$ is the zero ring. The following result of Hopkins--Kuhn--Ravenel saves the day:
 
 \begin{proposition}[{\cite[Proposition 6.5]{HKR}}]
-The ring $C_{0,k}$ is a faithfully flat $\Q \otimes E^0$-algebra.
+The ring $C_{0,k}$ is a faithfully flat $\Q \otimes E^0$-algebra. \pushQED\qed \qedhere \popQED
 \end{proposition}
 
 By construction, the $E^0$--algebra $C_{0,k}$ carries the universal isomorphism
@@ -375,25 +369,16 @@ Let us work out $C_0$ in the case of $E_{\G_m} = K_p$. In this case
 \[
 \G = \G_m,
 \]
-the formal multiplicative group over $\Z_p$. We can choose a coordinate so that the group law is
-\[
-x+_{\G_m}y = x+y+xy.
-\] 
-In this case something nice happens: we have that
+the formal multiplicative group over $\Z_p$.  Because $\G_m$ is the formal completion of the multiplicative group scheme $\mathbb G_m$, we have
 \[
 \G_m[p^k] \cong \mathbb{G}_m[p^k].
 \]
-That is, the $p^k$--torsion of the multiplicative formal group is the $p^k$--torsion of the multiplicative group scheme.
-
-On global sections and with the standard coordinate this isomorphism is given by the map
-\[
-\Z_p[x]/([p^k]_{\G_m}(x)) \cong \Z_p[x]/(x^{p^k}-1)
-\]
-sending
-\[
-x \mapsto x-1.
-\]
-Thus we have that 
+With the standard coordinate, this isomorphism is given by
+\begin{align*}
+\Z_p[x]/([p^k]_{\G_m}(x)) & \cong \Z_p[x]/(x^{p^k}-1) \\
+x & \mapsto x-1,
+\end{align*}
+from which we calculate 
 \[
 E^0(B\Lk) = K_{p}^0(B\Z/p^k) \cong \Z_p[x]/([p^k]_{\G_m}(x)) \cong \Z_p[x]/(x^{p^k}-1).
 \]
@@ -445,13 +430,13 @@ is an isomorphism. Thus $C_{0,k}$ is just $\Q_p$ adjoin a primitive $p^k$th root
 \[
 C_0 = \colim_k C_{0,k} \cong \colim_k \Q_p(\zeta_{p^k})
 \]
-is $\Q_p$ adjoin all $p$-power roots of unity---a totally ramified extension of $\Q_p$ with Galois group $\Z_{p}^{\times}$.
+is $\Q_p$ with all $p$-power roots of unity adjoined---a totally ramified extension of $\Q_p$ with Galois group $\Z_{p}^{\times}$.
 \end{example}
 
 \subsection*{The inertia groupoid}
 %Introduce the inertia groupoid and rational cohomology composed with the inertia groupoid.
 
-Our goal is to approximate $E^*(EG \times_G X)$ by the $HC_0P$--cohomology of a space determined by $EG \times_G X$. Stated more precisely, we'd like to find a space $F(EG \times_G X)$ and a map of cohomology theories
+Recall our goal of approximating $E^*(EG \times_G X)$ by the $HC_0P$--cohomology of some space determined by $EG \times_G X$. Stated more precisely, we'd like to find a space $F(EG \times_G X)$ and a map of cohomology theories
 \[
 E^*(EG \times_G X) \to HC_0P^*(F(EG \times_G X))
 \]
@@ -479,14 +464,14 @@ HC_0P^0\left(\coprod_{\Lk^*} BC_{p^k}\right) \cong \prod_{\Lk^*}C_0,
 \]
 which is what we wanted.
 
-However, there is a problem with this construction: the functor $\CatOf{InternalHom}{Spaces}(B\Lambda,-)$ does not send finite complexes to finite complexes and does not preserve homotopy colimits, as can be seen by applying it to the homotopy pushout diagram
+However, there is a problem with this construction: the functor $\InternalHom{Spaces}(B\Lambda,-)$ does not send finite complexes to finite complexes and does not preserve homotopy colimits, as can be seen by applying it to the homotopy pushout diagram
 \begin{center}
 \begin{tikzcd}
 \ast \coprod \ast \arrow{r} \arrow{d} & \ast \arrow{d} \\
 \ast \arrow{r} & S^1,
 \end{tikzcd}
 \end{center}
-thus $HC_0P^*(F(-))$ is not a cohomology theory. It turns out that there is a fix for both of these problems at once, called the inertia groupoid functor. 
+thus $HC_0P^*(F(-))$ is not a cohomology theory.  It turns out that the \textit{inertia groupoid functor} fixes both of these problems at once, and we describe it now.
 
 %
 % We'd like to do this in a naturally in $X$ so that when $G = C_p$ and $X = *$
@@ -518,7 +503,7 @@ where $X^{\im \alpha}$ is the fixed points of $X$ with respect to the image of $
 
 This is a finite $G$--CW complex by intertwining the action of $G$ on $G_{p}^{d}$ by conjugation and the action of $G$ on $X$. To be precise, for $x \in X^{\im \alpha}$, we let $gx \in X^{\im g \alpha g^{-1}}$.
 
-The $G$--space $\Fix_d(X)$ is also known as the $d$--fold inertia groupoid of the $G$--space $X$ (this is really a $p$--adic form of the inertia groupoid since $\Lambda = \Z_{p}^{\times d}$ and not $\Z^{\times d}$). That is, the definition above can be made for all finite groups uniformly in the category of topological groupoids. Let $X \mmod G$ be the action topological groupoid associated to the finite $G$--CW complex $X$. This is the groupoid object in topological spaces with object space $X$ and morphism space $X \times G$. The source and target maps
+The $G$--space $\Fix_d(X)$ is also known as the $d$--fold inertia groupoid of the $G$--space $X$.\footnote{This is really a $p$--adic form of the inertia groupoid since $\Lambda = \Z_{p}^{\times d}$ and not $\Z^{\times d}$.} That is, the definition above can be made for all finite groups uniformly in the category of topological groupoids. Let $X \mmod G$ be the action topological groupoid associated to the finite $G$--CW complex $X$. This is the groupoid object in topological spaces with object space $X$ and morphism space $X \times G$. The source and target maps
 \[
 X \times G \rightrightarrows X,
 \]
@@ -628,7 +613,7 @@ HC_{0}P^*(EG \times_G \Fix_d(*)) &\cong HC_{0}P^{*}\left(\coprod_{[\alpha] \in G
 \end{align*}
 The last isomorphism follows from the fact that $HC_{0}P^{*}(BG) = C_{0}^{*}$. The codomain is the ring of generalized class functions on $G_{p}^{d}$ taking values in $C_{0}^{*}$:
 \[
-\mathrm{Cl}(G_{p}^{d}, C_{0}^{*}) = \{C_{0}^{*} \text{-valued functions on } G_{p}^{d}/G\}.
+\mathrm{Cl}(G_{p}^{d}, C_{0}^{*}) = \{C_{0}^{*} \text{--valued functions on } G_{p}^{d}/G\}.
 \]
 One might want to concentrate on the degree $0$ part, in which case we have an isomorphism
 \[
@@ -798,7 +783,7 @@ with the ring map induced by the map of cohomology theories
 \[
 E \rightarrow H(\Q \otimes E^0)P \rightarrow HC_0P
 \]
-given by rationalization of $E$ and then the canonical ring map $\Q \otimes E^0 \rightarrow C_0$.
+given by rationalization followed by the canonical map $\Q \otimes E^0 \rightarrow C_0$.
 %\[
 %E^0(EG \times_G \Fix_n(X)) \rightarrow (\Q \otimes E)^0(EG \times_G \Fix_n(X))
 %\]
@@ -851,15 +836,11 @@ since fixed points is left exact. This implies that $HC_0P^*(EG \times_G \Fix_d(
 
 
 \begin{proof}[{Proof of \Cref{app:mainthm1}}]
-By \ref{app:codescent}, it suffices to prove that the map is an isomorphism for $X = G/A$. Since 
+By \ref{app:codescent}, it suffices to prove that the map is an isomorphism for $X = G/A$. Since we have an equivalence
 \[
-(G/A) \mmod G \simeq * \mmod A
+(G/A) \mmod G \simeq * \mmod A,
 \]
-we have an equivalence
-\[
-\InternalHom{TopologicalGroupoids}(* \mmod \Lambda, (G/A) \mmod G) \simeq \InternalHom{TopologicalGroupoids}(* \mmod \Lambda, * \mmod A).
-\]
-This reduces us to the case $G = A$ and $X =*$. Since both sides of the character map have Kunneth isomorphisms for products of finite abelian groups, we are reduced to cyclic groups. We want to show that 
+we are reduced to the case $G = A$ and $X = *$. Since both sides of the character map have Kunneth isomorphisms for products of finite abelian groups, we are reduced to cyclic groups. We want to show that 
 \[
 C_0 \otimes_{E^0} E^*(BC_{p^k}) \xrightarrow{\cong} \mathrm{Cl}((C_{p^k})_{p}^{d}, C_{0}^{*})
 \]
