remove numbered equations

--- a/characters.tex
+++ b/characters.tex
@@ -258,12 +258,12 @@ Given $\alpha \in \Lk^*$, the naturality of Proposition \ref{app:abeliangroupdua
 \InternalHom{FormalGroups}(\Lk^*,\G[p^k]) \to \G[p^k]
 \]
 on rings of functions is precisely
-\begin{equation} \label{app:gfunctions1}
-E^0(B\alpha) \colon E^0(BC_{p^k}) \to E^0(B\Lk).
+\begin{equation}
+E^0(B\alpha) \co E^0(BC_{p^k}) \to E^0(B\Lk).
 \end{equation}
 Using the fixed coordinate $x$, this is equivalent to a map of $E^0(B\Lk)$-algebras
-\begin{equation} \label{app:gfunctions2}
-u^* \colon E^0(B\Lk)\ps{x}/[p^k]_{\G}(x) \xrightarrow{} \prod_{\Lk^*} E^0(B\Lk).
+\begin{equation}
+u^* \co E^0(B\Lk)\ps{x}/[p^k]_{\G}(x) \xrightarrow{} \prod_{\Lk^*} E^0(B\Lk).
 \end{equation}
 Fixing a set of generators for $\Lk^*$, gives an isomorphism
 \[
@@ -856,7 +856,7 @@ and since $C_{0}^*$ is faithfully flat over $C_0$, it suffices to prove the isom
 \[
 C_0 \otimes_{E^0} E^0(BC_{p^k}) \xrightarrow{\prod C_{0} \otimes_{E^0} E^0(B\alpha)} E^0(B\Lk) \xrightarrow{\mathrm{incl}} \prod_{\alpha \in \Lk^*}C_0.
 \]
-By Equation \ref{app:gfunctions1} and the construction of $C_0$, this is the same as the map $C_0 \otimes_{E^0(B\Lk)} u^*$ built from Equation \ref{app:gfunctions2}.
+This is the same as the map $C_0 \otimes_{E^0(B\Lk)} u^*$ built far above.
 
 
 % But the description of the character map in this case from Example \ref{app:charmapexample} agrees with the ring of functions (Equation \ref{app:gfunctions}) on the algebro-geometric map of . 
