update some citations in nat's appendix

--- a/characters.tex
+++ b/characters.tex
@@ -76,7 +76,7 @@ X^{(n-1)} \arrow{r} & X^{(n)}.
 \end{center}
 We say that a $G$--CW complex is finite if it can be built out of finitely many cells of the form $G/H \times D^n$.
 
-\begin{theorem}[{Equivariant CW Approximation, \cite[Chapter I.1]{MayAlaska}}] \label{app:CWapprox}
+\begin{theorem}[{Equivariant CW Approximation, \cite[Chapter I.1]{MayAlaskaNotes}}] \label{app:CWapprox}
 Every $G$--space is weakly equivalent to a $G$--CW complex. \qed
 \end{theorem}
 
@@ -591,16 +591,13 @@ EG \times_{G}^{\text{conj}} G_{p}^{d} \simeq \coprod_{\alpha \in \Lk^*} BC_{p^k}
 \end{example}
 
 The inertia groupoid construction has another important property: 
-\begin{proposition}
+\begin{proposition}[{\cite[Section 6]{KuhnCharacterRings}}]
 Let $E$ be a cohomology theory, then
 \[
 E^*(EG \times_G \Fix_d(-))
 \]
-is a cohomology theory on finite $G$-CW complexes.
+is a cohomology theory on finite $G$-CW complexes. \pushQED\qed \qedhere \popQED
 \end{proposition}
-\begin{proof}
-This follows from Section 6 of ??.\citeme{citation}
-\end{proof}
 
 
 
@@ -895,7 +892,7 @@ This is the same as the map $C_0 \otimes_{E^0(B\Lk)} u^*$ built far above.
 %The following example explains how $\Phi_G$ was built to reduce to the algebraic geometry of \pdiv groups. 
 
 \begin{example}
-When $n=1$ and $X = *$ the character map produces a $p$--complete version of the classical character map from representation theory that is due to Adams~\cite[Section 2]{Adams-Maps2}). The map takes the form
+When $n=1$ and $X = *$ the character map produces a $p$--complete version of the classical character map from representation theory that is due to Adams~\cite[Section 2]{AdamsClassifyingSpacesII}). The map takes the form
 \[
 K_{p}^{0}(BG) \xrightarrow{} \mathrm{Cl}(G_{p}^{1}, C_0),
 \]
