--- a/main.bib
+++ b/main.bib
@@ -21,6 +21,22 @@
   MRNUMBER = {1324104 (96a:55002)},
 }
 
+@article {AdamsClassifyingSpacesII,
+    AUTHOR = {Adams, J. F.},
+     TITLE = {Maps between classifying spaces. {II}},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {49},
+      YEAR = {1978},
+    NUMBER = {1},
+     PAGES = {1--65},
+      ISSN = {0020-9910},
+   MRCLASS = {55R40 (55R35 55R50)},
+  MRNUMBER = {511095},
+MRREVIEWER = {C. B. Thomas},
+       URL = {https://doi.org/10.1007/BF01399510},
+}
+
 @article {AdamsJXIV,
     AUTHOR = {Adams, J. F.},
      TITLE = {On the groups {$J(X)$}. {IV}},
@@ -1870,6 +1886,20 @@ MRREVIEWER = {Alan Koch},
 MRREVIEWER = {Yves F{\'e}lix},
        DOI = {10.1090/conm/158/01455},
        URL = {http://dx.doi.org/10.1090/conm/158/01455},
+}
+
+@incollection {KuhnCharacterRings,
+    AUTHOR = {Kuhn, Nicholas J.},
+     TITLE = {Character rings in algebraic topology},
+ BOOKTITLE = {Advances in homotopy theory ({C}ortona, 1988)},
+    SERIES = {London Math. Soc. Lecture Note Ser.},
+    VOLUME = {139},
+     PAGES = {111--126},
+ PUBLISHER = {Cambridge Univ. Press, Cambridge},
+      YEAR = {1989},
+   MRCLASS = {55R40 (20J06)},
+  MRNUMBER = {1055872},
+MRREVIEWER = {V. P. Snaith},
 }
 
 @article {Kuhn,
