compress nat's todos

--- a/powerops.tex
+++ b/powerops.tex
@@ -74,19 +74,13 @@ Before understanding the maps in this commutative diagram, we must understand it
 Make sure there are no double-hats in A.1
 Make sure *all* Homs got changed to CatOf and InternalHom in A.1. (TopologicalGroupoids should be internal.)
 Make sure that the introduction says all of this is in HKR
+Morava's \textit{Local fields} paper; 
+Theorem 2.6 of Greenlees--Strickland;
 
 Insert Schlank-Stapleton reference into Strickland’s Theorem subsection
 Kuhn citation
 Equation labels?
-$p$--divisible group notation
-class functions notation}
-
-\todo[inline]{Some other references:
-Morava's \textit{Local fields} paper; 
-Theorem 2.6 of Greenlees--Strickland;
-work of Stapleton and Schlank--Stapleton;
-Nat's little monologue to me about the classical case, where the word ``character'' comes from;
-try to cover the action by $GL_n(\Z_p)$ (and hint at the action by $M_{n \times n}(\Z_p)$ with $\det \ne 0$)}
+$p$--divisible group notation}
 
 \input{characters}
 
