fix some hboxes
i once hoped these equations would be entirely obsoleted by improved understanding. alas

--- a/finite.tex
+++ b/finite.tex
@@ -801,11 +801,13 @@ Such an automorphism $\phi$ admits a series expansion
 \end{align*}
 Similarly, such a formal group law $+_\Delta$ admits a series expansion \[x +_\Delta y = (x +_\Gamma y) + \eps \cdot \delta(x, y).\]  Beginning with the associativity property \[(x +_\Delta y) +_\Delta z = x +_\Delta (y +_\Delta z),\] we compute $\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0}$ applied to both sides:
 \begin{align*}
-\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left((x +_\Delta y) +_\Delta z \right) & = \!\!\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left((((x +_\Gamma y) + \eps \cdot \delta(x, y)) +_\Gamma z) + \eps \cdot \delta(x +_\Gamma y, z)\right) \\
-& = \Gamma_1(x +_\Gamma y,z) \cdot \delta(x, y) + \delta(x +_\Gamma y, z), \\
+& \left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left((x +_\Delta y) +_\Delta z \right) \\
+& \quad = \!\!\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left((((x +_\Gamma y) + \eps \cdot \delta(x, y)) +_\Gamma z) + \eps \cdot \delta(x +_\Gamma y, z)\right) \\
+& \quad = \Gamma_1(x +_\Gamma y,z) \cdot \delta(x, y) + \delta(x +_\Gamma y, z), \\
 \intertext{and similarly}
-\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left( x +_\Delta (y +_\Delta z) \right) & = \!\!\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left( (x +_\Gamma ((y +_\Gamma z) + \eps \cdot \delta(y, z))) + \eps \cdot \delta(x, y +_\Gamma z) \right) \\
-& = \Gamma_2(x, y +_\Gamma z) \cdot \delta(y, z) + \delta(x, y +_\Gamma z).
+& \left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left( x +_\Delta (y +_\Delta z) \right) \\
+& \quad = \!\!\left. \frac{\partial}{\partial \eps} \right|_{\eps = 0} \left( (x +_\Gamma ((y +_\Gamma z) + \eps \cdot \delta(y, z))) + \eps \cdot \delta(x, y +_\Gamma z) \right) \\
+& \quad = \Gamma_2(x, y +_\Gamma z) \cdot \delta(y, z) + \delta(x, y +_\Gamma z).
 \end{align*}
 Equating these gives the condition in the Lemma statement.
 \end{proof}
