--- a/unknowns.tex
+++ b/unknowns.tex
@@ -263,7 +263,7 @@ There is a canonical short exact sequence \[0 \to \G_a \to \widehat{C\W}_p \xrig
 \end{center}
 This latter sequence is a \textit{rigidified extension} of $\G$ by $\G_a$, as in \Cref{ExtensionsPresentationOfDieudonne}.  The conclusion of Mazur and Messing is that this assignment is an isomorphism.
 
-We suspect that the two Dieudonn\'e functors can be connected via a \textit{residue pairing} between forms on $\G$ over $\W(k)$ and curves on $\G_0$ over $k$.  For inspiration, the residue pairing for an equicharacteristic local field \[\<-,-\>\co k(\!(z)\!) \times k(\!(z)\!)^* \to k\] is given by the formula \[\<g, f\> = \operatorname{Res}_{z=0}\left(g \cdot \frac{df}{f}\right) = \operatorname{Res}_{z=0}(g \cdot d\log f).\]  There are several ingredients in its construction for which we must find formal group analogues.  First, we must deal with the different ground objects $\W_p(k)$ and $k$ for $\G$ and $\G_0$:
+We suspect that the two Dieudonn\'e functors can be connected via a \textit{residue pairing} between forms on $\G$ over $\W(k)$ and curves on $\G_0$ over $k$.  For inspiration, the residue pairing for an equicharacteristic local field \[\<-,-\>\co k(\!(z)\!) \times k(\!(z)\!)^* \to k\] is given by the formula \[\<g, f\> = \operatorname{Res}_{z=0}\left(g \cdot \frac{\mathrm df}{f}\right) = \operatorname{Res}_{z=0}(g \cdot \mathrm d\log f).\]  There are several ingredients in its construction for which we must find formal group analogues.  First, we must deal with the different ground objects $\W_p(k)$ and $k$ for $\G$ and $\G_0$:
 \begin{lemma}[{\cite[Lemma VII.7.5]{LazardCFGs}}]
 There is a $(\W, F)$--linear section $\sigma$ of the base-change map $D_* \G \to D_* \G_0$.
 \end{lemma}
@@ -287,7 +287,7 @@ Second, we must produce an analogue of logarithmic differentiation, which is res
     \G_a \otimes \Lie \G \arrow["\log_{\G_a \otimes \Lie \G}", equal]{r} & \G_a \otimes \Lie G.
     \end{tikzcd}
     \end{center}
-    The bottom logarithm is the identity, since the source is already additive.  If we evaluate these maps on a curve $\gamma \in C_* \G$, we arrive at the equation~\cite[V.8.5]{LazardCFGs} \[\breve D_{\G} \circ \gamma = \breve D_{\G_a \otimes \Lie G} \circ \log_{\G} \circ \gamma = \frac{d}{dt} \left( (\log_\G \circ \gamma)(t) \right).\]  Hence, $\breve D_{\G}$ plays the role of a logarithmic derivative.
+    The bottom logarithm is the identity, since the source is already additive.  If we evaluate these maps on a curve $\gamma \in C_* \G$, we arrive at the equation~\cite[V.8.5]{LazardCFGs} \[\breve D_{\G} \circ \gamma = \breve D_{\G_a \otimes \Lie G} \circ \log_{\G} \circ \gamma = \frac{\mathrm d}{\mathrm dt} \left( (\log_\G \circ \gamma)(t) \right).\]  Hence, $\breve D_{\G}$ plays the role of a logarithmic derivative.
 \end{enumerate}
 
 The conjecture, then, is that these pieces go much of the way towards describing a local residue pairing internal to the theory of formal groups, but there are still several details left to the enterprising reader, such as: should the de Rham complex be replaced?\footnote{Relatedly, can $\breve D_{\G}$ or $D_{\widehat{\mathbb H}}^{\widehat{\mathbb G}}$ be used to give a coordinate-free description of the deformation complex of \Cref{DeformationComplex}?}  Where do \emph{primitives} in de Rham cohomology enter play?  How do the formulas for $\sigma$ in terms of $\breve D_{\G}$~\cite[VII.6.14]{LazardCFGs} enter this story---presumably in demonstrating perfection?
@@ -343,7 +343,7 @@ In a yet different direction, Lurie's approach to the reinterpretation of the $\
 
 \subsection*{Index theorems}
 
-In closing the book, we finally address the lurking physical inspiration for the $\sigma$--orientation.  One of the most remarkable developments of modern physics, from the perspective of a mathematician, is their ability to ``guess'' the Atiyah--Singer index theorem~\cite[Section 8.6]{Takhtajan}: there is a path integral formulation for the supertrace of the Dirac operator on a $\Spin$ manifold $M$ which expresses it as the time evolution of a massive supersymmetric particle evolving through $M$, and standard expansions for this physical system lead directly to the discovery of the $\widehat A$--genus and, ultimately, the index formula \[\operatorname{ind} /\!\!\!\partial_+ = \operatorname{Tr}_s \mathrm e^{-H} = (2 \pi \mathrm i)^{-\frac{n}{2}} \int_M \widehat A(M).\]  The $\sigma$--orientation was uncovered by Witten when studying the free loopspace $\L M$ of the manifold $M$, which is indeed a natural space to consider when studying string theory on $M$.  The condition that $M$ be $\String$ is exactly the precondition that $\L M$ be $\Spin$, so that an analogous Dirac operator exists.  The $\sigma$--orientation then arises when trying to express a formula for the index of the Dirac operator on the free loopspace in terms of invariants of $M$ and using analogous path integral methods~\cite{SegalEll}.
+In closing the book, we finally address the lurking physical inspiration for the $\sigma$--orientation.  One of the most remarkable developments of modern physics, from the perspective of a mathematician, is their ability to ``guess'' the Atiyah--Singer index theorem~\cite[Section 8.6]{Takhtajan}: there is a path integral formulation for the supertrace of the Dirac operator on a $\Spin$ manifold $M$ which expresses it as the time evolution of a massive supersymmetric particle evolving through $M$, and standard expansions for this physical system lead directly to the discovery of the $\widehat A$--genus and, ultimately, the index formula \[\operatorname{ind}\, /\!\!\!\partial_+ = \operatorname{Tr}_s \mathrm e^{-H} = (2 \pi \mathrm i)^{-\frac{n}{2}} \int_M \widehat A(M).\]  The $\sigma$--orientation was uncovered by Witten when studying the free loopspace $\L M$ of the manifold $M$, which is indeed a natural space to consider when studying string theory on $M$.  The condition that $M$ be $\String$ is exactly the precondition that $\L M$ be $\Spin$, so that an analogous Dirac operator exists.  The $\sigma$--orientation then arises when trying to express a formula for the index of the Dirac operator on the free loopspace in terms of invariants of $M$ and using analogous path integral methods~\cite{SegalEll}.
 
 Because of the predictive power of the physical appartus, one might hope to uncover other types of analytic data from it---for instance, a geometric theory of elliptic cohomology.  In addition to the variant of bordism theory described far above, the most long-standing program is due to Stolz and Teichner~\cite{StolzTeichnerWhatIs,StolzTeichnerSusy}, though it is not alone even among physically-inspired theories (for instance, see \cite{DouglasHenriques} as well as many other papers by the same authors).
 
