include nat's summary of strickland's theorem

--- a/main.bib
+++ b/main.bib
@@ -3079,6 +3079,21 @@ MRREVIEWER = {Andrew J. Baker},
   year={2016}
 }
 
+@article {SchlankStapleton,
+    AUTHOR = {Schlank, Tomer M. and Stapleton, Nathaniel},
+     TITLE = {A transchromatic proof of {S}trickland's theorem},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {285},
+      YEAR = {2015},
+     PAGES = {1415--1447},
+      ISSN = {0001-8708},
+   MRCLASS = {55N20 (20C15 55N91 55P35)},
+  MRNUMBER = {3406531},
+MRREVIEWER = {Bj\"orn Schuster},
+       URL = {https://doi.org/10.1016/j.aim.2015.07.025},
+}
+
 @article {Schoeller,
     AUTHOR = {Schoeller, Colette},
      TITLE = {\'{E}tude de la cat\'egorie des alg\`ebres de {H}opf
