fix a stray "is"

--- a/foreword.tex
+++ b/foreword.tex
@@ -59,7 +59,7 @@ well reflected in this book.  It has a down-to-earth and inviting
 style (no small achievement in a book about 
 functorial algebraic geometry).  It is elegant,
 precise, and incisive, and it is strong on both theory and
-calculation.  An important feature is of the book is that it takes the
+calculation.  An important feature of the book is that it takes the
 time to give elegant proofs of some ``theory-external'' results:
 theorems you might care about even if chromatic stable homotopy theory isn't
 your subject.  
