--- a/mo.tex
+++ b/mo.tex
@@ -385,13 +385,26 @@ There is an isomorphism \[\mathcal A_* \cong \F_2[\xi_1, \xi_2, \ldots, \xi_j, \
 The definition of the elements \(\xi_j\) determines a Hopf algebra map \(\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*\) and hence a map of schemes \[\Spec \mathcal A_* \to \Spec \F_2[\xi_j \mid j \ge 1].\]  This second map is injective: if it had a kernel, then this would produce a subalgebra of \(\mathcal A^*\) that acts trivially on \(\HFtwo^* \RP^\infty\), but any nonconstant member of \(\mathcal A^*\) acts nontrivially on \(\HFtwo^* (\RP^\infty)^{\times k}\) for \(k \gg 0\), and hence nontrivially on \(\HFtwo^* \RP^\infty\) itself.  Then, since \(\mathcal A_*\) and the polynomial algebra are both of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableContextsSection}), and noting that he has exactly enough.
 \end{proof}
 
-We are now in a position to uncover the desired map \(\alpha^*\) from earlier.  In order to retell Milnor's story with \(\HFtwo P\) in place of \(\HFtwo\), note that there is a topological construction involving \(\HFtwo\) from which \(\mathcal A_*\) emerges: \[\mathcal A_* := \pi_*(\HFtwo \sm \HFtwo).\]  Performing substitution on this formula gives the \index{Steenrod algebra!periodified, dual}periodified dual Steenrod algebra: \[\mathcal AP_0 := \pi_0 (\HFtwo P \sm \HFtwo P) = \HFtwo P_0(\HFtwo P) = \mathcal A_*[\xi_0^\pm].\]
+We are now in a position to uncover the desired map \(\alpha^*\) from earlier.  In order to retell Milnor's story with \(\HFtwo P\) in place of \(\HFtwo\), note that there is a topological construction involving \(\HFtwo\) from which \(\mathcal A_*\) emerges: \[\mathcal A_* := \pi_*(\HFtwo \sm \HFtwo).\]  Performing substitution on this formula gives the \index{Steenrod algebra!periodified, dual}periodified dual Steenrod algebra: \[\mathcal AP_0 := \pi_0 (\HFtwo P \sm \HFtwo P) = \HFtwo P_0(\HFtwo P) \cong \mathcal A_*[\xi_0^\pm].\]
 
 \begin{lemma}[{\cite[Formula 3.4, Remark 3.14]{GoerssQCohOnMfg}}]
-Projecting to the quotient Hopf algebra \(\mathcal AP_0 \to \F_2[\xi_0^\pm]\) gives exactly the coaction map \(\alpha^*\).
+Projecting to the quotient Hopf algebra \(\mathcal AP_0 \to \F_2[\xi_0^\pm]\) gives exactly the $\mathbb G_m$--action map provided by \Cref{GradedAndGmEquivAgree}.
 \end{lemma}
 \begin{proof}[Calculation]
-Starting with an auxiliary cohomology class \(x \in \HFtwo^n(X)\), we produce a homogenized cohomology class \(x \cdot u^n \in \HFtwo P^0(X)\).  Under the coaction map, this is sent to
+The main topological observation is that there is an inclusion
+\begin{align*}
+(H\F_2 \sm H\F_2)P & = \\
+\bigvee_j \Susp^j (H\F_2 \sm H\F_2) & \subseteq \bigvee_{r,s} \Susp^r H\F_2 \sm \Susp^s H\F_2 \\
+& = H\F_2P \sm H\F_2P
+\end{align*}
+which is compatible with the unit map as in
+\begin{center}
+\begin{tikzcd}
+& \HFtwo P \sm \HFtwo P \sm X \\
+\HFtwo P \sm X \arrow{ru} \arrow{r} & (\HFtwo \sm \HFtwo)P \sm X \arrow{u}.
+\end{tikzcd}
+\end{center}
+We now study how these inclusions interact with homogenization.  Starting with an auxiliary cohomology class \(x \in \HFtwo^n(X)\), we produce a homogenized cohomology class \(x \cdot u^n \in \HFtwo P^0(X)\), and a class \(\kappa \in \mathcal A_n\) similarly gives a homogenized class \(\kappa u^n \in \mathcal AP_0\).  The Steenrod coaction on \(x\) admits expression as a sum \[\psi(x) = \sum_I x_I \prod_j \xi_j^{I_j}\] for classes \(x_I\) with \(|x_I| = |x| - \sum_j (2^j-1) I_j\).  Under the periodified coaction map, the homogenized element \(x u^n\) is sent to \[\psi(xu^n) = \sum_I \left(x_I u^{n - \sum_j (2^j-1) I_j}\right) \otimes \xi_0^{n - \sum_j (2^j-1) I_j} \prod_j \left(u^{2^j - 1}\xi_j\right)^{I_j},\] where the invertible element \(\xi_0 = u^{-1} \otimes u \in \mathcal AP_0\) of degree $0$ appears when shearing the powers of $u$ into the desired places in the formula.  Projecting to the tensor factor of \(\mathcal AP_0\) spanned by $\xi_0$, we thus compute
 \begin{center}
 \begin{tikzcd}[row sep=0.2em]
 \HFtwo P^0(X) \arrow["\alpha^*"]{r} & \HFtwo P^0(X) \otimes \mathcal AP_0 \arrow{r} & \HFtwo P^0(X) \otimes \F_2[\xi_0^\pm] \\
