--- a/intro.tex
+++ b/intro.tex
@@ -61,7 +61,7 @@ Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\St
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
 \begin{theorem}[{Ochanine~\cite{Ochanine,OchanineEnrichmentToKO}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\label{OchanineWittenTheorem}\index{orientation!Witten genus}
-There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if \(Z\) is a \(\Spin\) manifold such that half its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
+There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if \(Z\) is a \(\Spin\) manifold such that half\footnote{It is a special property of \(\Spin\)--manifolds that this class is always divisible by \(2\).} its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
 \end{theorem}
 
 \noindent However, neither party gave indication that their result should be valid ``in families'' (in our sense), and no theory of integration was formally produced (in our sense).  From the perspective of the homotopy theorist, it wasn't even totally clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
