incorporate a bunch of corrections from sean

--- a/conventions.tex
+++ b/conventions.tex
@@ -6,7 +6,7 @@ Throughout this book, we use the following conventions:
 
 \begin{itemize}
 \item Categories will be consistently typeset as in the examples \[\CatOf{Spaces}, \quad \CatOf{FormalGroups}, \quad \CatOf{GradedHopfAlgebras}.\]
-\item $\CatOf{C}(X, Y)$ will denote the mapping set of arrows $X \to Y$ in a category $\CatOf{C}$.  If $\CatOf{C}$ is an $\infty$--category, this will be interpreted instead as a mapping \emph{space}.  If $\CatOf{C}$ has a self-enrichment, we will often write $\underline{\CatOf{C}}(X, Y)$ (or, e.g., $\InternalAut(X)$) to distinguish the internal mapping object from the classical mapping set $\CatOf{C}(X, Y)$.  As an exception to this uniform notation, we will sometimes abbreviate $\underline{\CatOf{Spaces}}(X, Y)$ to $F(X, Y)$, and similarly we will sometimes abbreviate $\underline{\CatOf{Spectra}}(X, Y)$ to $F(X, Y)$, with ``$F$'' short for ``function''.
+\item $\CatOf{C}(X, Y)$ will denote the mapping set of arrows $X \to Y$ in a category $\CatOf{C}$.  If $\CatOf{C}$ is an $\infty$--category, this will be interpreted instead as a mapping \emph{space}.  If $\CatOf{C}$ has a self-enrichment, we will often write $\underline{\CatOf{C}}(X, Y)$ (or, e.g., $\InternalAut(X)$) to distinguish the internal mapping object from the classical mapping set $\CatOf{C}(X, Y)$.  As a first exception to this uniform notation, we will sometimes abbreviate $\underline{\CatOf{Spaces}}(X, Y)$ to $F(X, Y)$, and similarly we will sometimes abbreviate $\underline{\CatOf{Spectra}}(X, Y)$ to $F(X, Y)$, with ``$F$'' short for ``function''.  As a second exception, for two formal groups $\G$ and $\mathbb H$, we denote the function scheme by \[\InternalHom{FormalGroups}(\G, \mathbb H),\] even though this is a \emph{scheme} rather than a \emph{formal scheme}.
 \item Following Lurie, for an object $X \in \CatOf C$ we will write $\CatOf C_{/X}$ for the slice category of objects \emph{over} $X$ and $\CatOf C_{X/}$ for the slice category of objects \emph{under} $X$.
 \item For a spectrum $E$, we will write $E^*(X)$ for the unreduced $E$--cohomology of a space $X$ and $E_*(X)$ for the unreduced $E$--homology of $X$.  We denote the reduced $E$--cohomology of a pointed space $X$ by $\widetilde E^*(X)$ and the reduced $E$--homology by $\widetilde E_*(X)$.  Finally, for $F$ another spectrum, we write $E^*(F)$ and $E_*(F)$ for the $E$--cohomology and $E$--homology respectively of $F$.  Altogether, these satisfy the relations \[E_*(X) = E_*(\Susp^\infty_+ X) = E_*(\Susp^\infty X) \oplus E_* = \widetilde E_*(X) \oplus E_*,\] and similarly for cohomology.
 \item For a spectrum $E$, we will write $\OS{E}{n}$ for the $n${\th} space in the $\Omega$--spectrum representing $E$.  The homotopy type of this space is determined by the formula \[h\CatOf{Spaces}(X, \OS{E}{n}) = h\CatOf{Spaces}(X, \Loops^\infty \Susp^n E) = h\CatOf{Spaces}(\Susp^\infty X, \Susp^n E) = \widetilde E^n(X).\]
