--- a/mo.tex
+++ b/mo.tex
@@ -447,7 +447,12 @@ The projection \(\mathcal AP_0 \to \F_2[\xi_0^\pm]\) is split as Hopf algebras, 
 \end{remark}
 
 \begin{example}
-Remembering the slogan \[\Spec \mathcal AP_0 \cong \InternalAut \G_a\] also makes it easy to recall the structure formulas for the dual Steenrod algebra.  For instance, consider the antipode map, which has the effect on \(\InternalAut \G_a\) of sending a power series to its compositional inverse.  That is: \[\sum_{j=0}^\infty \chi(\xi_j) \left( \sum_{k=0}^\infty \xi_k x^{2^k} \right)^{2^j} = \sum_{j=0}^\infty \sum_{k=0}^\infty \chi(\xi_j) \xi_k^{2^j} x^{2^{j+k}} = \sum_{n=0}^\infty \left( \sum_{j+k=n} \chi(\xi_j) \xi_k^{2^j} \right) x^{2^n} = 1,\] from which we can extract formulas like
+Remembering the slogan \[\Spec \mathcal AP_0 \cong \InternalAut \G_a\] also makes it easy to recall the structure formulas for the dual Steenrod algebra.  For instance, consider the antipode map, which has the effect on \(\InternalAut \G_a\) of sending a power series to its compositional inverse.  That is:
+\begin{align*}
+\sum_{j=0}^\infty \chi(\xi_j) \left( \sum_{k=0}^\infty \xi_k x^{2^k} \right)^{2^j} & = \sum_{j=0}^\infty \sum_{k=0}^\infty \chi(\xi_j) \xi_k^{2^j} x^{2^{j+k}} \\
+& = \sum_{n=0}^\infty \left( \sum_{j+k=n} \chi(\xi_j) \xi_k^{2^j} \right) x^{2^n} = 1,
+\end{align*}
+from which we can extract formulas like
 \begin{align*}
 \chi(\xi_0) & = \xi_0^{-1}, &
 \chi(\xi_1) & = \xi_0^{-3} \xi_1, &
